# authifier

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  TODO  compose.yml  config.toml  default.nix  docker-compose.yml  justfile  pwned100k.txt  rocket.toml  tree
.github/workflows/: rust.yml
assets/: revolt_smtp_source_list.txt  revolt_source_list.txt
crates/authifier/: Cargo.toml  README.md
crates/authifier/assets/: pwned100k.txt
crates/authifier/src/: lib.rs  result.rs  util.rs
crates/authifier/src/config/: blocklists.rs  captcha.rs  email_verification.rs  ip_resolve.rs  mod.rs  passwords.rs  shield.rs  sso.rs
crates/authifier/src/database/: definition.rs  dummy.rs  mod.rs  mongo.rs
crates/authifier/src/derive/: okapi.rs  rocket.rs
crates/authifier/src/events/: mod.rs
crates/authifier/src/impl/: account.rs  callback.rs  id_provider.rs  invite.rs  mod.rs  secret.rs  session.rs  ticket.rs
crates/authifier/src/impl/mfa/: mod.rs  totp.rs
crates/authifier/src/models/: account.rs  callback.rs  id_provider.rs  invite.rs  mod.rs  secret.rs  session.rs  ticket.rs
crates/authifier/src/models/mfa/: totp.rs
crates/rauth/: Cargo.toml
crates/rauth/assets/: revolt_source_list.txt
crates/rauth/src/: lib.rs  result.rs  util.rs
crates/rauth/src/config/: blocklists.rs  captcha.rs  email_verification.rs  mod.rs  passwords.rs
crates/rauth/src/database/: definition.rs  dummy.rs  mod.rs  mongo.rs
crates/rauth/src/derive/: mod.rs  okapi.rs  rocket.rs
crates/rauth/src/events/: mod.rs
crates/rauth/src/impl/: account.rs  invite.rs  mod.rs  session.rs  ticket.rs
crates/rauth/src/impl/mfa/: mod.rs  totp.rs
crates/rauth/src/models/: account.rs  invite.rs  mod.rs  session.rs  ticket.rs
crates/rauth/src/models/mfa/: mod.rs  totp.rs
crates/rocket_authifier/: Cargo.toml  README.md
crates/rocket_authifier/examples/: rocket_mongodb.rs  rocket_sso.rs
crates/rocket_authifier/src/: test.rs
crates/rocket_authifier/src/routes/: mod.rs
crates/rocket_authifier/src/routes/account/: change_email.rs  change_password.rs  confirm_deletion.rs  create_account.rs  delete_account.rs  disable_account.rs  fetch_account.rs  mod.rs  password_reset.rs  resend_verification.rs  send_password_reset.rs  verify_email.rs
crates/rocket_authifier/src/routes/mfa/: create_ticket.rs  fetch_recovery.rs  fetch_status.rs  generate_recovery.rs  get_mfa_methods.rs  mod.rs  totp_disable.rs  totp_enable.rs  totp_generate_secret.rs
crates/rocket_authifier/src/routes/session/: edit.rs  fetch_all.rs  login.rs  logout.rs  mod.rs  revoke.rs  revoke_all.rs
crates/rocket_authifier/src/routes/sso/: authorize.rs  callback.rs  mod.rs
crates/rocket_rauth/: Cargo.toml
crates/rocket_rauth/examples/: rocket_mongodb.rs  rocket_mongodb_no_okapi.rs
crates/rocket_rauth/src/: lib.rs  test.rs
crates/rocket_rauth/src/routes/: mod.rs
crates/rocket_rauth/src/routes/account/: change_email.rs  change_password.rs  confirm_deletion.rs  create_account.rs  delete_account.rs  disable_account.rs  fetch_account.rs  mod.rs  password_reset.rs  resend_verification.rs  send_password_reset.rs  verify_email.rs
crates/rocket_rauth/src/routes/mfa/: create_ticket.rs  fetch_recovery.rs  fetch_status.rs  generate_recovery.rs  get_mfa_methods.rs  mod.rs  totp_disable.rs  totp_enable.rs  totp_generate_secret.rs
crates/rocket_rauth/src/routes/session/: edit.rs  fetch_all.rs  login.rs  logout.rs  mod.rs  revoke.rs  revoke_all.rs
examples/: main.rs
src/: auth.rs  config.rs  db.rs  email.rs  lib.rs  options.rs  routes.rs  test.rs  util.rs
src/entities/: account.rs  invite.rs  mod.rs  session.rs  ticket.rs
src/logic/: auth.rs
src/routes/: check_session.rs  create_account.rs  create_session.rs  fetch_account.rs  fetch_sessions.rs  logout.rs  mod.rs  verify_account.rs
src/routes/accounts/: change_email.rs  change_password.rs  create_account.rs  fetch_account.rs  mod.rs  verify_account.rs
src/routes/security/: mod.rs  resend_verification.rs  reset_form.html  reset_password.rs  reset_password_form.rs  send_password_reset.rs
src/routes/sessions/: create_session.rs  delete_session.rs  fetch_sessions.rs  logout.rs  mod.rs  rename_session.rs
src/web/: mod.rs
src/web/account/: change_email.rs  change_password.rs  create_account.rs  fetch_account.rs  mod.rs  password_reset.rs  resend_verification.rs  send_password_reset.rs  verify_email.rs
src/web/mfa/: fetch_recovery.rs  fetch_status.rs  generate_recovery.rs  mod.rs  totp_disable.rs  totp_enable.rs  totp_generate_secret.rs
src/web/session/: edit.rs  fetch_all.rs  login.rs  logout.rs  mod.rs  revoke.rs  revoke_all.rs
