[package]
name = "rauth"
version = "0.3.0"
authors = ["Paul Makles <paulmakles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-std-runtime = [ "async-std" ]

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
serde = { version = "1.0.116", features = [ "derive" ] }
validator = { version = "0.11", features = ["derive"] }
lettre = "0.10.0-alpha.4"
serde_json = "1.0.60"
lazy_static = "1.4.0"
rust-argon2 = "0.8.2"
handlebars = "3.5.1"
reqwest = "0.10.10"
chrono = "0.4.19"
mongodb = "1.2.2"
nanoid = "0.3.0"
regex = "1.3.9"
json = "0.12.4"
ulid = "0.4.1"

async-std = { version = "1.9.0", features = ["tokio1", "attributes"], optional = true }
