[package]
name = "rauth"
version = "1.0.0"
authors = ["Paul Makles <paulmakles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-std-runtime = [ "async-std" ]
default = [ "async-std-runtime" ]

[dependencies]
mongodb = "1.2.2"
wither = { git = "https://github.com/insertish/wither", branch = "master" }

async-std = { version = "1.9.0", features = ["tokio02", "tokio1", "attributes"], optional = true }
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.11.4", features = ["json"] }

lettre = "0.10.0-alpha.4"
handlebars = "3.5.1"

serde = { version = "1.0.116", features = [ "derive" ] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.60"
lazy_static = "1.4.0"
rust-argon2 = "0.8.2"
validator = "0.14.0"

futures = "0.3.16"
nanoid = "0.3.0"
regex = "1.3.9"
json = "0.12.4"
ulid = "0.4.1"

rand = "0.8.4"
base32 = "0.4.0"
totp-lite = "1.0.3"
