[package]
name = "authifier"
version = "1.0.9"
edition = "2021"
license = "Apache-2.0"
authors = ["Pawel Makles <me@insrt.uk>"]
description = "Opinionated Rust authentication library"
repository = "https://github.com/authifier/authifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
database-mongodb = ["mongodb", "bson"]
rocket_impl = ["rocket"]
okapi_impl = ["revolt_rocket_okapi", "revolt_okapi", "schemas"]
schemas = ["schemars"]

revolt_source_list = []
pwned100k = []
have_i_been_pwned = []
hcaptcha = ["reqwest"]
shield = ["reqwest"]
default_inbuilts = ["pwned100k", "hcaptcha", "shield"]
# default_inbuilts = []

default = ["database-mongodb", "default_inbuilts"]

[dependencies]
# Lang
log = "0.4"
ulid = "1"
rand = "0.8.5"
regex = "1.3.9"
nanoid = "0.4.0"
base32 = "0.5"
lazy_static = "1.4.0"
async-trait = "0.1.56"

futures = { version = "0.3.21" }

# Serde
serde_json = { version = "1.0.81" }
iso8601-timestamp = { version = "0.3" }
serde = { version = "1.0.116", features = ["derive"] }

# MongoDB
bson = { version = "2.2.0", optional = true }
mongodb = { version = "3", default-features = false, optional = true, features = [
    "compat-3-0-0",
    "rustls-tls",
] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

# Schemas
revolt_rocket_okapi = { version = "0.10.0", features = [
    "swagger",
], optional = true }
revolt_okapi = { version = "0.9.1", optional = true }
schemars = { version = "0.8.8", optional = true }

# Validation
validator = "0.19"

# Web Requests
reqwest = { version = "0.11.10", features = ["json"], optional = true }

# Rocket
rocket = { version = "0.5.1", default-features = false, features = [
    "json",
], optional = true }

# Security
totp-lite = "2.0.0"
rust-argon2 = "1.0.0"

# Email
lettre = "0.11"
handlebars = "6"
