[package]
name = "rauth"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-std-runtime = [ "async-std", "mongodb/async-std-runtime" ]
database-mongodb = [ "mongodb", "bson", "futures" ]
rocket_impl = [ "rocket" ]
okapi_impl = [ "rocket_okapi", "okapi", "schemas" ]
schemas = [ "schemars" ]

revolt_source_list = []
pwned100k = []
have_i_been_pwned = []
hcaptcha = [ "reqwest" ]
default_inbuilts = [ "revolt_source_list", "pwned100k", "hcaptcha" ]
# default_inbuilts = []

default = [ "async-std-runtime", "database-mongodb", "default_inbuilts" ]

[dependencies]
# Lang
log = "*"
ulid = "0.5.0"
rand = "0.8.5"
regex = "1.3.9"
nanoid = "0.4.0"
base32 = "0.4.0"
chrono = "0.4.19"
lazy_static = "1.4.0"
async-trait = "0.1.56"

futures = { version = "0.3.21", optional = true }

# Serde
serde_json = { version = "1.0.81" }
iso8601-timestamp = { version = "0.1.10" }
serde = { version = "1.0.116", features = [ "derive" ] }

# MongoDB
bson = { version = "2.2.0", optional = true }
mongodb = { version = "2.2.1", default-features = false, optional = true }

# Async runtime
async-std = { version = "1.9.0", features = ["tokio02", "tokio1", "attributes"], optional = true }

# Schemas
rocket_okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120", features = [ "swagger" ], optional = true }
okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120", optional = true }
schemars = { version = "0.8.8", optional = true }

# Validation
validator = "0.15.0"

# Web Requests
reqwest = { version = "0.11.10", features = ["json"], optional = true }

# Rocket
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"], optional = true }

# Security
totp-lite = "2.0.0"
rust-argon2 = "1.0.0"

# Email
lettre = "0.10.0-alpha.4"
handlebars = "4.3.0"
