[package]
name = "rocket_authifier"
version = "1.0.9"
edition = "2021"
license = "Apache-2.0"
authors = ["Pawel Makles <me@insrt.uk>"]
description = "rocket.rs implementation of authifier"
repository = "https://github.com/authifier/authifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["reqwest", "regex", "serde_json", "base32", "example"]
example = ["authifier/database-mongodb", "mongodb"]

default = []

[dependencies]
# Authifier
authifier = { version = "1.0.9", path = "../authifier", features = [
    "rocket_impl",
    "okapi_impl",
] }

# Rocket
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
rocket_empty = { version = "0.1.2", features = ["schema"] }

# Serde
iso8601-timestamp = { version = "0.3" }
serde = { version = "1.0.116", features = ["derive"] }

# Schemas
revolt_rocket_okapi = { version = "0.10.0", features = ["swagger"] }
revolt_okapi = { version = "0.9.1" }
schemars = { version = "0.8.8" }

# Testing
base32 = { version = "0.5", optional = true }
regex = { version = "1.5.6", optional = true }
serde_json = { version = "1.0.81", optional = true }
reqwest = { version = "0.11.10", features = ["json"], optional = true }
tokio = { version = "1", features = ["sync", "time"] }
mongodb = { version = "3", default-features = false, optional = true, features = [
    "compat-3-0-0",
    "rustls-tls",
] }
