[package]
name = "rocket_authifier"
version = "1.0.12"
edition = "2021"
license = "Apache-2.0"
authors = ["Pawel Makles <me@insrt.uk>"]
description = "rocket.rs implementation of authifier"
repository = "https://github.com/authifier/authifier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["reqwest", "regex", "serde_json", "chrono", "base32", "example"]
example = [
    "authifier/async-std-runtime",
    "authifier/database-mongodb",
    "async-std",
    "mongodb",
]

default = []

[dependencies]
# Authifier
authifier = { version = "1.0.11", path = "../authifier", features = [
    "rocket_impl",
    "okapi_impl",
] }

# Rocket
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
rocket_empty = { version = "0.1.2", features = ["schema"] }

# Serde
iso8601-timestamp = { version = "0.2.10" }
serde = { version = "1.0.116", features = ["derive"] }

# Schemas
revolt_rocket_okapi = { version = "0.10.0", features = ["swagger"] }
revolt_okapi = { version = "0.9.1" }
schemars = { version = "0.8.8" }

# Testing
base32 = { version = "0.4.0", optional = true }
regex = { version = "1.5.6", optional = true }
chrono = { version = "0.4.19", optional = true }
serde_json = { version = "1.0.81", optional = true }
reqwest = { version = "0.11.10", features = ["json"], optional = true }
mongodb = { version = "3.1", optional = true }
async-std = { version = "1.9.0", features = [
    "tokio02",
    "tokio1",
    "attributes",
], optional = true }
