[package]
name = "rocket_rauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = [ "reqwest" ]

[dependencies]
# rAuth
rauth = { path = "../rauth", features = [ "rocket_impl", "okapi_impl" ] }

# Rocket
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_empty = { git = "https://github.com/insertish/rocket_empty", branch = "master" }

# Serde
serde = { version = "1.0.116", features = [ "derive" ] }

# Schemas
rocket_okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120", features = [ "swagger" ] }
okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120" }
schemars = { version = "0.8.8" }

# Testing
reqwest = { version = "0.11.10", features = ["json"], optional = true }
